# codex-kyarameru-toolbox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: discord-notify.yml  pr-discord-notify.yml  tests.yml
ai_log/: 2026-03-24.md  README.md
apps/moira/: Cargo.toml  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
apps/moira/src/: main.rs  model.rs  store.rs
codex-initial-state/: README.md  config.toml
crates/kyarameru-task/: Cargo.toml
crates/kyarameru-task/src/: lib.rs  main.rs
docs/: architecture.md  half-year-research-report.md  harness-spec.md  overview.md  repository-layout.md  requirements.md  research.md  task-list.md  understanding-check.md
docs/agents/: overview.md  validation.md  workflow.md
docs/distribution/: getting-started.md  repository-layout.md  task-list.md
docs/faile/: AGENTSbestpracthis.md  config.md
docs/harness-reports/: 2026-04-23-harness-weekly.md  (+7 more)
docs/staudy/: study.md  (+2 more)
scripts/: finish-pr.sh  gitleaks.toml  harness.sh  install.py  notify-discord.sh  policy-check.sh  repo-health-check.sh  report-validate-apply.sh  restore-codex-default.sh  secret-check.sh  start-branch.sh  toolbox-manager.py  update-task-state.sh
tests/: README.md  test-plugin-layout.py  test-toolbox-manager.py  test_install.py  test_plugin_layout.py  test_report_writer.py  test_sample_orchestration.py
toolbox/: AGENTS.md  README.md
toolbox-benchmark/: README.md  evaluator-prompt.md  results-template.md
toolbox-greece/: AGENTS.md  README.md  config.toml  pytest.ini
(+372 files in other folders)
