[package]
name = "kyarameru-task"
version = "0.1.0"
edition = "2024"
description = "User-led task planning CLI for harness engineering with Codex."
license = "MIT"

[[bin]]
name = "kytask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

